fix bux: create-article form content overflows on small screens

--- a/src/components/forms/form.module.scss
+++ b/src/components/forms/form.module.scss
@@ -262,3 +262,14 @@
     transform: rotate(38deg);
   }
 }
+
+@media (max-width: 520px) {
+  .tags-list {
+    flex-direction: column;
+    row-gap: 10px;
+
+    &__add {
+      align-self: flex-start;
+    }
+  }
+}
